content/terraform/v1.15.x/docs/cli/commands/stacks/providers-lock.mdx
---
page_title: terraform stacks providers lock
description: The terraform stacks providers lock command creates or updates the dependency lock file for the current component configuration.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-19T19:11:19Z
last_modified: 2025-11-19T19:11:19Z
# END AUTO GENERATED METADATA
---

# `terraform stacks providers-lock` reference

Use the `terraform stacks providers-lock` command to create or update the dependency lock file, `.terraform.lock.hcl`, for the current component configuration.

## Usage

```shell-session
$ terraform stacks <global-stacks-flags> providers-lock <options>
```

## Description

The `terraform stacks providers-lock` command creates or updates the dependency lock file (`.terraform.lock.hcl`) for the current component configuration. This lock file records the exact versions and checksums of provider packages that Terraform should use, ensuring consistent provider versions across different environments and team members.

## Options

- `-platform=os_arch`: Choose a target platform to request package checksums for.
    - Optional.
    - String data type in the format `os_arch` (e.g., `linux_amd64`, `darwin_amd64`).
    - By default, Terraform will request package checksums suitable for execution within HCP Terraform (`linux_amd64`) and your current machine.
    - Use this option multiple times to include checksums for multiple target systems.
- `-json`: Output results in JSON format instead of the default human-readable text format.
    - Optional.
    - Boolean flag.
    - Default is false (human-readable format).

## Examples

The following command creates or updates the lock file for the current platform and HCP Terraform:

```shell-session
$ terraform stacks providers-lock
```

The following command creates or updates the lock file with checksums for multiple platforms:

```shell-session
$ terraform stacks providers-lock -platform=linux_amd64 -platform=darwin_amd64 -platform=windows_amd64
```

The following command creates or updates the lock file and outputs JSON:

```shell-session
$ terraform stacks providers-lock -json
```

## Global flags

Refer to [Global flags reference](/terraform/cli/commands/stacks/global-flags) for information about flags you can use with all commands.

## Related

- [Terraform Stacks CLI reference](/terraform/cli/commands/stacks)
